--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - ./:/var/www/html
     command: bash -c "composer install & php-fpm"
+    depends_on:
+      - db
   web:
     image: nginx:alpine
     container_name: demo-symfony-web
@@ -16,6 +18,8 @@ services:
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./:/var/www/html
+    depends_on:
+      - app
   db:
     image: postgres:16-alpine
     container_name: demo-symfony-db
